--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
   "homepage": "https://github.com/titaniumbones/xslt-example#readme",
   "dependencies": {
     "json-stringify-pretty-compact": "^2.0.0"
+    "json-stringify-pretty-compact": "^2.0.0",
+    "yargs": "^15.4.1"
   }
 }
