--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "homepage": "https://github.com/titaniumbones/xslt-example#readme",
   "dependencies": {
-    "json-stringify-pretty-compact": "^2.0.0"
     "json-stringify-pretty-compact": "^2.0.0",
+    "stringify-object": "^3.3.0",
     "yargs": "^15.4.1"
   }
 }
